<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_new_user"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/description_text_width"
                android:layout_height="wrap_content"
                android:text="@string/name_desc"
                android:textSize="@dimen/description_text_size" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="@dimen/description_text_size"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/description_text_width"
                android:layout_height="wrap_content"
                android:text="@string/age_desc"
                android:textSize="@dimen/description_text_size" />

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="@dimen/description_text_size"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/description_text_width"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth_desc"
                android:textSize="@dimen/description_text_size" />

            <TextView
                android:id="@+id/tv_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="12dp"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                android:textSize="@dimen/description_text_size"
                tools:text="23/05/2020" />

            <Button
                android:id="@+id/btn_set_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_date"
                android:textSize="@dimen/description_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/description_text_width"
                android:layout_height="wrap_content"
                android:text="@string/is_student_desc"
                android:textSize="@dimen/description_text_size" />

            <CheckBox
                android:id="@+id/cb_is_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/description_text_size" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_new_user"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/add_new_user"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>